# xiaobait9-tools

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
shell/: install-rime.sh
translations/: xiaobait9-tools_zh_CN.qm  xiaobait9-tools_zh_CN.ts
